--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -14,9 +14,9 @@
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
-		<li><a href="#">Home</a></li>
 		<li><a href="#">PLAY SERENITY</a></li>
 		<li><a href="#">MY ACCOUNT</a></li>
+		<li><a href="#">SEARCH</a></li>
     </ul>
   </nav>
 </header>
