--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -9,16 +9,20 @@
 <body>
 <header>
   <div class="logo">
-    <p>TechBasics</p>
+    <p>RUNETERRA</p>
   </div>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-		<li><a href="#">PLAY SERENITY</a></li>
+      <li><a href="#">HOME</a></li>
+		<li><a href="#">STORE</a></li>
 		<li><a href="#">MY ACCOUNT</a></li>
 		<li><a href="#">SEARCH</a></li>
     </ul>
   </nav>
+	<button><a href="#"><h4 style="color: #f5f5f5">PLAY DIVINE</h4></a></button>
 </header>
+	<div class="img"><img class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" alt=""></div>
+	<div class="img"><img class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" alt=""></div>
+	<div class="img"><img class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" alt=""></div>
 </body>
 </html>
