--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -108,7 +108,7 @@
       </div>
       <div class="footer-col">
         <h4 style="color: white;">follow us</h4>
-        <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
+        <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div><br><p style="color:#bbbbbb;">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
       </div>
     </div>
   </div>
