--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -22,7 +22,7 @@
   </nav>
   <button>
   <a href="#">
-  <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
+  <h4 style="color: #f5f5f5">PLAY dDIVINE</h4>
   </a>
   </button>
   <div class= "hamburger">
