--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -6,7 +6,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
-
 <body>
 <header id="navbar">
   <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;">
@@ -17,12 +16,11 @@
       <li><a href="#">HOME</a></li>
       <li><a href="#">STORE</a></li>
       <li><a href="#">MY ACCOUNT</a></li>
-      <li><a href="#">SEARCH</a></li>
     </ul>
   </nav>
   <button>
   <a href="#">
-  <h4 style="color: #f5f5f5">PLAY dDIVINE</h4>
+  <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
   </a>
   </button>
   <div class= "hamburger">
@@ -31,22 +29,24 @@
     <div class="line"></div>
   </div>
 </header>
-<div class="img"><img class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" alt=""></div>
+<div class="img"><video class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" loop autoplay muted></video>
+
+	</div>
 <hr class="new1">
 <p style="color: white; width: 95%;margin: 0px auto 0px auto; font-size: 20px;">FEATURED</p>
 <br>
 <div class="grid">
   <div class="img-wrapper"><img class="zoom blur" src="Resources/header-1.jpg" alt="" style="width: 100%;">
-    <div class="content fade" style="color: white;">lorem 20</div>
+    <div class="content fade" style="color: white; font-size: 22px">SEASON OF THE PLUNDER</div>
   </div>
   <div class="img-wrapper"><img class="zoom blur" src="Resources/header-2.jpg" alt="" style="width: 100%;">
-    <div class="content fade" style="color: white;">lorem 20</div>
+    <div class="content fade" style="color: white; font-size: 22px">DIVINE SHOWCASE</div>
   </div>
   <div class="img-wrapper"><img class="zoom blur" src="Resources/header-3.jpg" alt="" style="width: 100%;">
-    <div class="content fade" style="color: white;">lorem 20</div>
+    <div class="content fade" style="color: white; font-size: 22px">EXPLORER WELCOME PAGE</div>
   </div>
   <div class="img-wrapper"><img class="zoom blur" src="Resources/header-4.png" alt="" style="width: 100%;">
-    <div class="content fade" style="color: white;">lorem 20</div>
+    <div class="content fade" style="color: white; font-size: 22px">HISTORY OF DIVINE</div>
   </div>
 </div>
 <hr class="new1">
@@ -55,24 +55,24 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">Kukujiao</h1>
-    <p style="color: white;">DIVINE HOTFIX 1.2.3</p>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 14/11/2022</h1><br>
+    <p style="color: white;">This week at Runeterra, we dive into what's going on in the world of Divine.</p>
   </div>
 </div>
 <br>
 <div class="news">
   <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">This is heading.</h1>
-    <p style="color: white;">DIVINE HOTFIX 1.2.3</p>
+    <h1 style="color: white; margin: 20px auto auto auto;">DIVINE HOTFIX 5.4.7</h1><br>
+    <p style="color: white;">WEAPON BALANCES AND CLASS ABILITIES REWORKS.</p>
   </div>
 </div>
 <br>
 <div class="news">
   <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">This is heading.</h1>
-    <p style="color: white;">DIVINE HOTFIX 1.2.3</p>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 21/11/2022</h1><br>
+    <p style="color: white;">This week at Bungie, we have a little chat about Guardian abilities and the next step of evolution. With a little side of candy, naturally. It is the last week of Festival of the Lost, after all. </p>
   </div>
 </div>
 <br>
@@ -116,11 +116,11 @@
   </div>
 </footer>
 <script>
-	const hamburger = document.querySelector(".hamburger");
+ const hamburger = document.querySelector(".hamburger");
 	const navbar = document.querySelector(".nav-bar");
-	hamburger.addEventListener("click",() => navbar.classList.toggle("active"));
-	
-	window.onscroll = function() {scrollFunction()};
+ hamburger.addEventListener("click",() => navbar.classList.toggle("active"));
+ 
+ window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
   if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
@@ -129,6 +129,6 @@ function scrollFunction() {
     document.getElementById("navbar").style.background = "rgba(0, 0, 0, 0.2)";
   }
 }
-	</script>
+ </script>
 </body>
 </html>
