--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -53,7 +53,7 @@
 <p style="color: white; width: 95%;margin: 0px auto 0px auto; font-size:20px;">LATEST NEWS</p>
 <br>
 <div class="news">
-  <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
+  <div class="newsimage"> <img src="Resources/mid-1.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
     <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 14/11/2022</h1><br>
     <p style="color: white;">This week at Runeterra, we dive into what's going on in the world of Divine.</p>
@@ -61,15 +61,15 @@
 </div>
 <br>
 <div class="news">
-  <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
+  <div class="newsimage"> <img src="Resources/mid-2.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
     <h1 style="color: white; margin: 20px auto auto auto;">DIVINE HOTFIX 5.4.7</h1><br>
-    <p style="color: white;">WEAPON BALANCES AND CLASS ABILITIES REWORKS.</p>
+    <p style="color: white;">Weapon balances and class abilities reworks.</p>
   </div>
 </div>
 <br>
 <div class="news">
-  <div class="newsimage"> <img src="Resources/header-3.jpg" alt="" style="width: 100%;"> </div>
+  <div class="newsimage"> <img src="Resources/mid-3.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
     <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 21/11/2022</h1><br>
     <p style="color: white;">This week at Bungie, we have a little chat about Guardian abilities and the next step of evolution. With a little side of candy, naturally. It is the last week of Festival of the Lost, after all. </p>
