--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -15,11 +15,11 @@
     <ul>
       <li><a href="#">HOME</a></li>
       <li><a href="#">STORE</a></li>
-      <li><a href="#">MY ACCOUNT</a></li>
+      <li><a href="login.html">MY ACCOUNT</a></li>
     </ul>
   </nav>
   <button>
-  <a href="#">
+  <a href="login.html">
   <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
   </a>
   </button>
