--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -6,16 +6,23 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
+	
 <body>
 <header id="navbar">
-  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;">
-    <p>RUNETERRA</p>
+  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
+    <p style="display: inline-block; margin-left: 5px;"> RUNETERRA</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">STORE</a></li>
-      <li><a href="login.html">MY ACCOUNT</a></li>
+      <li><a href="index.html">
+        <p style="color: white;">HOME</p>
+        </a></li>
+      <li><a href="feature.html">
+        <p style="color: white;">STORE</p>
+        </a></li>
+      <li><a href="login.html">
+        <p style="color: white;">MY ACCOUNT</p>
+        </a></li>
     </ul>
   </nav>
   <button>
@@ -29,9 +36,9 @@
     <div class="line"></div>
   </div>
 </header>
-<div class="img"><video class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" loop autoplay muted></video>
-
-	</div>
+<div class="img">
+  <video class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" loop autoplay muted></video>
+</div>
 <hr class="new1">
 <p style="color: white; width: 95%;margin: 0px auto 0px auto; font-size: 20px;">FEATURED</p>
 <br>
@@ -55,7 +62,8 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/mid-1.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 14/11/2022</h1><br>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 14/11/2022</h1>
+    <br>
     <p style="color: white;">This week at Runeterra, we dive into what's going on in the world of Divine.</p>
   </div>
 </div>
@@ -63,7 +71,8 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/mid-2.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">DIVINE HOTFIX 5.4.7</h1><br>
+    <h1 style="color: white; margin: 20px auto auto auto;">DIVINE HOTFIX 5.4.7</h1>
+    <br>
     <p style="color: white;">Weapon balances and class abilities reworks.</p>
   </div>
 </div>
@@ -71,7 +80,8 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/mid-3.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 21/11/2022</h1><br>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 21/11/2022</h1>
+    <br>
     <p style="color: white;">This week at Bungie, we have a little chat about Guardian abilities and the next step of evolution. With a little side of candy, naturally. It is the last week of Festival of the Lost, after all. </p>
   </div>
 </div>
