--- a/ID/Assignment/login.html
+++ b/ID/Assignment/login.html
@@ -8,15 +8,21 @@
 </head>
 
 <body>
-	<header id="navbar">
-  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;">
-    <p>RUNETERRA</p>
+<header id="navbar">
+  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
+    <p style="display: inline-block; margin-left: 5px;"> RUNETERRA</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">STORE</a></li>
-      <li><a href="login.html">MY ACCOUNT</a></li>
+      <li><a href="index.html">
+        <p style="color: white;">HOME</p>
+        </a></li>
+      <li><a href="feature.html">
+        <p style="color: white;">STORE</p>
+        </a></li>
+      <li><a href="login.html">
+        <p style="color: white;">MY ACCOUNT</p>
+        </a></li>
     </ul>
   </nav>
   <button>
@@ -34,13 +40,13 @@
   <div class="imgBx"> <img src="Resources/login.jpg"> </div>
   <div class="contentBx">
     <div class="formBx">
-      <h2>Login</h2>
+      <h2>Welcome back Guardian</h2>
       <form>
-        <div class="inputBx"> <span>Username</span>
-          <input type="text" name="">
+        <div class="inputBx"> <span>Runeterra ID</span>
+          <input type="text" style="color: white;" name="">
         </div>
         <div class="inputBx"> <span>Password</span>
-          <input type="password" name="">
+          <input type="password" style="color: white;" name="">
         </div>
         <div class="remember">
           <label>
@@ -54,14 +60,76 @@
           <p>Don't have an account? <a href="#">Sign up</a></p>
         </div>
       </form>
-		<h3>Login with social media</h3>
-		<ul class="sci">
-		<a href="#"><li class="fab fa-facebook-f"></li></a>
-		<a href="#"><li class="fab fa-twitter"></li></a>
-		<a href="#"><li class="fab fa-instagram"></li></a>
-		</ul>
+      <h3>Login with desired platform</h3>
+      <ul class="sci">
+        <a href="#">
+        <li class="fab fa-facebook-f"></li>
+        </a> <a href="#">
+        <li class="fab fa-playstation"></li>
+        </a> <a href="#">
+        <li class="fab fa-xbox"></li>
+        </a> <a href="#">
+        <li class="fab fa-steam"></li>
+        </a> <a href="#">
+        <li class="fab fa-twitch"></li>
+        </a>
+      </ul>
     </div>
   </div>
 </section>
+<footer class="footer" style="background-color: #14191e;">
+  <div class="container">
+    <div class="row">
+      <div class="footer-col">
+        <h4 style="color: white;">DIVINE</h4>
+        <ul>
+          <li><a href="#">News</a> </li>
+          <li><a href="#">Get Divine</a> </li>
+          <li><a href="#">Seasons</a> </li>
+          <li><a href="#">Community</a> </li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4 style="color:white;">RUNETERRA</h4>
+        <ul>
+          <li><a href="#">Careers</a> </li>
+          <li><a href="#">Tech Blog</a> </li>
+          <li><a href="#">Press Room</a> </li>
+          <li><a href="#">Runeterra Newsroom</a> </li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4 style="color: white;">STORE</h4>
+        <ul>
+          <li><a href="#">What's new</a> </li>
+          <li><a href="#">Merchandise</a> </li>
+          <li><a href="#">Soundtraks</a> </li>
+          <li><a href="#">Runeterra Rewards</a> </li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4 style="color: white;">follow us</h4>
+        <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
+        <br>
+        <p style="color:#bbbbbb;">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+<script>
+ const hamburger = document.querySelector(".hamburger");
+	const navbar = document.querySelector(".nav-bar");
+ hamburger.addEventListener("click",() => navbar.classList.toggle("active"));
+ 
+ window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
+    document.getElementById("navbar").style.background = "rgba(0, 0, 0, 1)";
+  } else {
+    document.getElementById("navbar").style.background = "rgba(0, 0, 0, 0.2)";
+  }
+}
+ </script>
 </body>
 </html>
