--- a/ID/Assignment/feature.html
+++ b/ID/Assignment/feature.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+
 <title>feature</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -40,7 +42,7 @@
   <video src="Resources/Featured.mp4" loop autoplay muted style="width: 100%;"></video>
 </div>
 <div class="feature">
-  <h1 style="text-align: center;color:white;font-size: 50px;letter-spacing: 1.5px;">FINDING AND BUILDING YOUR DIVINE</h1>
+  <h1>FINDING AND BUILDING YOUR DIVINE</h1>
   <br>
   <p style="text-align: center;">Whoa! Simply said, there is a lot happening on right now. We wanted to make sure that you didn't miss any of the excitement since there are so many trailers, announcements, and huge news beats dropping today. Think of this as your one-stop shop for all that we have shared today.</p>
   <hr>
@@ -132,7 +134,7 @@
  window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
-  if (document.body.scrollTop > 950 || document.documentElement.scrollTop > 950) {
+  if (document.body.scrollTop > 900 || document.documentElement.scrollTop > 900) {
     document.getElementById("navbar").style.background = "rgba(0, 0, 0, 1)";
   } else {
     document.getElementById("navbar").style.background = "rgba(0, 0, 0, 0.2)";
