--- a/ID/Assignment/login.html
+++ b/ID/Assignment/login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
@@ -40,7 +41,7 @@
   <div class="imgBx"> <img src="Resources/login.jpg"> </div>
   <div class="contentBx">
     <div class="formBx">
-      <h2>Welcome back Guardian</h2>
+      <h2>Welcome back Explorer</h2>
       <form>
         <div class="inputBx"> <span>Runeterra ID</span>
           <input type="text" style="color: white;" name="">
