--- a/ID/Assignment/index.html
+++ b/ID/Assignment/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
