--- a/Assignment/feature.html
+++ b/Assignment/feature.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>feature</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
 <header id="navbar">
   <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
-    <p style="display: inline-block; margin-left: 5px;"> RUNETERRA</p>
+    <p style="display: inline-block; margin-left: 5px;"> HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
@@ -27,11 +26,7 @@
         </a></li>
     </ul>
   </nav>
-  <button>
-  <a href="login.html">
-  <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
-  </a>
-  </button>
+  <button onClick="login.html" value="PLAY DIVINE" style="color: white;">PLAY DIVINE </button>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
@@ -100,12 +95,12 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color:white;">RUNETERRA</h4>
+        <h4 style="color:white;">HALFBYTE</h4>
         <ul>
           <li><a href="#">Careers</a> </li>
           <li><a href="#">Tech Blog</a> </li>
           <li><a href="#">Press Room</a> </li>
-          <li><a href="#">Runeterra Newsroom</a> </li>
+          <li><a href="#">Halfbyte Newsroom</a> </li>
         </ul>
       </div>
       <div class="footer-col">
@@ -114,7 +109,7 @@
           <li><a href="#">What's new</a> </li>
           <li><a href="#">Merchandise</a> </li>
           <li><a href="#">Soundtraks</a> </li>
-          <li><a href="#">Runeterra Rewards</a> </li>
+          <li><a href="#">Halfbyte Rewards</a> </li>
         </ul>
       </div>
       <div class="footer-col">
