--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
-	
+
 <body>
 <header id="navbar">
   <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
-    <p style="display: inline-block; margin-left: 5px;"> RUNETERRA</p>
+    <p style="display: inline-block; margin-left: 5px;"> HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
@@ -27,11 +26,7 @@
         </a></li>
     </ul>
   </nav>
-  <button>
-  <a href="login.html">
-  <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
-  </a>
-  </button>
+  <button onClick="login.html" value="PLAY DIVINE" style="color: white;">PLAY DIVINE </button>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
@@ -64,9 +59,9 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/mid-1.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 14/11/2022</h1>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT HALFBYTE - 14/11/2022</h1>
     <br>
-    <p style="color: white;">This week at Runeterra, we dive into what's going on in the world of Divine.</p>
+    <p style="color: white;">This week at HALFBYTE, we dive into what's going on in the world of Divine.</p>
   </div>
 </div>
 <br>
@@ -82,9 +77,9 @@
 <div class="news">
   <div class="newsimage"> <img src="Resources/mid-3.jpg" alt="" style="width: 95%;"> </div>
   <div class="text">
-    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT RUNETERRA - 21/11/2022</h1>
+    <h1 style="color: white; margin: 20px auto auto auto;">THIS WEEK AT HALFBYTE - 21/11/2022</h1>
     <br>
-    <p style="color: white;">This week at Bungie, we have a little chat about Guardian abilities and the next step of evolution. With a little side of candy, naturally. It is the last week of Festival of the Lost, after all. </p>
+    <p style="color: white;">This week at HALFBYTE, we have a little chat about Guardian abilities and the next step of evolution. With a little side of candy, naturally. It is the last week of Festival of the Lost, after all. </p>
   </div>
 </div>
 <br>
@@ -101,12 +96,12 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color:white;">RUNETERRA</h4>
+        <h4 style="color:white;">HALFBYTE</h4>
         <ul>
           <li><a href="#">Careers</a> </li>
           <li><a href="#">Tech Blog</a> </li>
           <li><a href="#">Press Room</a> </li>
-          <li><a href="#">Runeterra Newsroom</a> </li>
+          <li><a href="#">Halfbyte Newsroom</a> </li>
         </ul>
       </div>
       <div class="footer-col">
@@ -115,7 +110,7 @@
           <li><a href="#">What's new</a> </li>
           <li><a href="#">Merchandise</a> </li>
           <li><a href="#">Soundtraks</a> </li>
-          <li><a href="#">Runeterra Rewards</a> </li>
+          <li><a href="#">Halfbye Rewards</a> </li>
         </ul>
       </div>
       <div class="footer-col">
