--- a/Assignment/login.html
+++ b/Assignment/login.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>index</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<link href="style.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
 <header id="navbar">
   <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
-    <p style="display: inline-block; margin-left: 5px;"> RUNETERRA</p>
+    <p style="display: inline-block; margin-left: 5px;"> HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
@@ -26,11 +26,7 @@
         </a></li>
     </ul>
   </nav>
-  <button>
-  <a href="login.html">
-  <h4 style="color: #f5f5f5">PLAY DIVINE</h4>
-  </a>
-  </button>
+  <button onClick="login.html" value="PLAY DIVINE" style="color: white;">PLAY DIVINE </button>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
@@ -38,24 +34,24 @@
   </div>
 </header>
 <section>
-  <div class="imgBx"> <img src="Resources/login.jpg"> </div>
+  <div class="imgBx"> <img src="Resources/login.jpg" alt=""> </div>
   <div class="contentBx">
     <div class="formBx">
       <h2>Welcome back Explorer</h2>
       <form>
-        <div class="inputBx"> <span>Runeterra ID</span>
-          <input type="text" style="color: white;" name="">
+        <div class="inputBx"> <span>Halfbyte ID</span>
+          <input type="text" style="color: white;">
         </div>
         <div class="inputBx"> <span>Password</span>
-          <input type="password" style="color: white;" name="">
+          <input type="password" style="color: white;">
         </div>
         <div class="remember">
           <label>
-            <input type="checkbox" name="">
+            <input type="checkbox">
             Remember me</label>
         </div>
         <div class="inputBx">
-          <input type="submit" value="Sign in" name="">
+          <input type="submit" value="Sign in">
         </div>
         <div class="inputBx">
           <p>Don't have an account? <a href="#">Sign up</a></p>
@@ -63,17 +59,11 @@
       </form>
       <h3>Login with desired platform</h3>
       <ul class="sci">
-        <a href="#">
-        <li class="fab fa-facebook-f"></li>
-        </a> <a href="#">
-        <li class="fab fa-playstation"></li>
-        </a> <a href="#">
-        <li class="fab fa-xbox"></li>
-        </a> <a href="#">
-        <li class="fab fa-steam"></li>
-        </a> <a href="#">
-        <li class="fab fa-twitch"></li>
-        </a>
+        <li class="fab fa-facebook-f" style="color: white;"></li>
+        <li class="fab fa-playstation" style="color: white;"></li>
+        <li class="fab fa-xbox" style="color: white;"></li>
+        <li class="fab fa-steam" style="color: white;"></li>
+        <li class="fab fa-twitch" style="color: white;"></li>
       </ul>
     </div>
   </div>
@@ -91,12 +81,12 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color:white;">RUNETERRA</h4>
+        <h4 style="color:white;">HALFBYTE</h4>
         <ul>
           <li><a href="#">Careers</a> </li>
           <li><a href="#">Tech Blog</a> </li>
           <li><a href="#">Press Room</a> </li>
-          <li><a href="#">Runeterra Newsroom</a> </li>
+          <li><a href="#">Halfbyte Newsroom</a> </li>
         </ul>
       </div>
       <div class="footer-col">
@@ -105,7 +95,7 @@
           <li><a href="#">What's new</a> </li>
           <li><a href="#">Merchandise</a> </li>
           <li><a href="#">Soundtraks</a> </li>
-          <li><a href="#">Runeterra Rewards</a> </li>
+          <li><a href="#">Halfbyte Rewards</a> </li>
         </ul>
       </div>
       <div class="footer-col">
