--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -26,15 +26,28 @@
         </a></li>
     </ul>
   </nav>
-  <button onClick="login.html" value="PLAY DIVINE" style="color: white;">PLAY DIVINE </button>
+  <button class="nav-button">
+  <a href="login.html" style="color: white;">PLAY DIVINE</a>
+  </button>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
   </div>
 </header>
-<div class="img">
-  <video class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" loop autoplay muted></video>
+<div id="box-search">
+  <div class="thumbnail">
+    <video class="header-pic" src="Resources/bnet_lightfall_homepage_desktop.mp4" loop autoplay muted></video>
+    <img src="Resources/header-pic2.png" alt="" class="header-pic2">
+    <div class="caption">
+      <p>DIVINE</p>
+      <p>OUR END BEGINS</p>
+      <br>
+      <button class="header-button">
+      <a href="login.html" style="color: white;">LEARN MORE</a>
+      </button>
+    </div>
+  </div>
 </div>
 <hr class="new1">
 <p style="color: white; width: 95%;margin: 0px auto 0px auto; font-size: 20px;">FEATURED</p>
