--- a/Assignment/login.html
+++ b/Assignment/login.html
@@ -26,7 +26,9 @@
         </a></li>
     </ul>
   </nav>
-  <button onClick="login.html" value="PLAY DIVINE" style="color: white;">PLAY DIVINE </button>
+  <button class="nav-button">
+  <a href="login.html" style="color: white;">PLAY DIVINE</a>
+  </button>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
