--- a/Assignment/login.html
+++ b/Assignment/login.html
@@ -109,20 +109,6 @@
     </div>
   </div>
 </footer>
-<script>
- const hamburger = document.querySelector(".hamburger");
-	const navbar = document.querySelector(".nav-bar");
- hamburger.addEventListener("click",() => navbar.classList.toggle("active"));
- 
- window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 350 || document.documentElement.scrollTop > 350) {
-    document.getElementById("navbar").style.background = "rgba(0, 0, 0, 1)";
-  } else {
-    document.getElementById("navbar").style.background = "rgba(0, 0, 0, 0.2)";
-  }
-}
- </script>
+<script src= "script.js" async></script>
 </body>
 </html>
