--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <a href="index.html" style="font-size: 25px; color: white">
           <img src="Resources/logo.png" alt="" class="navlogo" />
-          <p style="display: inline-block; margin-left: 5px">HALFBYTE</p>
+          <p style="display: inline-block; margin-left: 5px">HALFBYTEE</p>
         </a>
       </div>
       <nav class="nav-bar">
